# veo3_bot

./: .gitignore  README.md  alembic.ini  alembic_temp.db  config.py  env.example  main.py  nohup.out  pyproject.toml  тз_реферальная_и_партнёрская_программа_для_объектиveo_3_telegram_бот.md
alembic/: env.py
alembic/versions/: 05c6c8e724f3_.py  0632349164b6_.py  112884a08de7_.py  18b11caad14b_.py  18c502ea2eac_.py  219b38c6977a_.py  3070f7e7841f_.py  331145b9a214_.py  4d2b2a043135_add_referral_system_models.py  58e3b43d9f60_.py  5bbc7e80b4f0_.py  5eb07c1c96ed_.py  69c80672763e_.py  6fde92466f1d_.py  71fad250dae0_add_referral_and_partner_program_tables.py  7d8be18f7fb8_add_link_requests_table.py  7ff48ba73e95_.py  99b310334e78_.py  a1b2c3d4e5f6_implement_referral_and_partner_program_schema.py  b2c3d4e5f6a7_add_is_suspicious_flag_to_user.py  b7cf47480f12_.py  c5f8e3a2b1d0_implement_corrected_referral_schema.py  da078e8ea6c4_.py  e36f4d12907a_add_pending_payments_table.py  f71f2c6c42c8_add_yookassa_payment_id_to_purchases.py
api/: app.py
api/crud/: partner.py  referral_link.py  transaction.py
api/database/: __init__.py  base.py
api/generate/: __init__.py
api/models/: __init__.py  audit.py  audit_log.py  coin_bonus_ledger.py  partner.py  partner_balance.py  partner_commission_ledger.py  payment.py  payments.py  payout_request.py  (+7 more)
crud/: __init__.py
fsm/: __init__.py
generate/: __init__.py
logs/: output_25.08.2025  output_28.08.2025
routers/: __init__.py
schemas/: __init__.py
services/: payment.py
utils/: progress.py  referral.py  referral_codes.py
(+73 files in other folders)
